libs/bng/test/negative/N0201_rxn_used_unknown_component.bngl
# FAIL
# OUTPUT: error: Molecule type 'A' does not declare component 'a' or all instances of this component were already used.
# OUTPUT: error: Molecule type 'A' does not declare component 'q' or all instances of this component were already used.

begin parameters
   kp 0.00001
   km 1
end parameters

begin molecule types
   A(a,p~0~1)
end molecule types

begin reaction rules
  A(a, a) + A(a, q) <-> A(a!1).A(a!1) kp, km
end reaction rules
